# SyncRig-model-SMPLerX

./: .gitignore  README.md  pyproject.toml
src/syncrig_model_smplerx/: __init__.py  provider.py  retarget.py
src/syncrig_model_smplerx/_smplerx/: __init__.py  config.py  constants.py  heads.py  layers.py  model.py  transforms.py  vit.py
