[project]
name = "syncrig-model-smplerx"
version = "0.1.0"
description = "SMPLer-X provider plug-in for SyncRig (research-only; S-Lab 1.0 + SMPL-X MPI)"
license = "LicenseRef-S-Lab-1.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.13"
# Runtime deps split into a default minimum (the SyncRig contract) and a
# heavyweight ``runtime`` extra. Users who only want capabilities()
# introspection (e.g. the ExtensionsPage card before installing) can
# import the package without pulling torch.
dependencies = [
    "syncrig-core>=0.1.0",
    "syncrig-engine>=0.1.0",
]

[project.optional-dependencies]
runtime = [
    "torch>=2.0",
    "torchvision",
    "smplx>=0.1.28",
    "opencv-python>=4.8",
    "numpy>=1.24",
]

[project.entry-points."syncrig.providers"]
# Engine's ``ProviderRegistry.autoload_entry_points("syncrig.providers")``
# at startup discovers this and imports it. Importing the package runs
# its ``__init__.py`` which (a) registers the ``smplx_55`` topology +
# retarget handler and (b) registers the SmplerXProvider class.
smplerx = "syncrig_model_smplerx.provider:SmplerXProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syncrig_model_smplerx"]
